# neutralts

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust-tests.yml
cache-utils/: clean-cache
doc/: README.md  bif-allow.md  bif-array.md  bif-bool.md  bif-cache.md  bif-coalesce.md  bif-code.md  bif-comment.md  bif-contains.md  bif-count.md  bif-data.md  bif-date.md  bif-debug.md  bif-declare.md  bif-defined.md  bif-each.md  bif-else.md  bif-eval.md  bif-exit.md  bif-fetch.md  bif-filled.md  bif-flg.md  bif-for.md  bif-hash.md  bif-include.md  bif-join.md  bif-lang.md  bif-locale.md  bif-moveto.md  bif-neutral.md  bif-obj.md  bif-param.md  bif-rand.md  bif-redirect.md  bif-replace.md  bif-same.md  bif-snippet.md  bif-sum.md  bif-trans.md  bif-unprintable.md  (+7 more)
docs/: index.html  search-index.js  src-files.js
docs/neutralts/: all.html  constant.DEFAULT.html  enum.Value.html  index.html  macro.json.html  struct.Template.html
docs/neutralts/bif/: index.html  sidebar-items.js  struct.Bif.html  struct.BifError.html
docs/neutralts/block_parser/: index.html  struct.BlockInherit.html  struct.BlockParser.html
src/: block_parser.rs  constants.rs  default_json.rs  doc.rs  lib.rs  macros.rs  shared.rs  template.rs  test_helpers.rs  utils.rs
src/bif/: constants.rs  exec_php.rs  exec_python.rs  mod.rs  parse_bif_allow.rs  parse_bif_allow_tests.rs  parse_bif_array.rs  parse_bif_array_tests.rs  parse_bif_bool.rs  parse_bif_bool_tests.rs  parse_bif_cache.rs  parse_bif_cache_tests.rs  parse_bif_coalesce.rs  parse_bif_coalesce_tests.rs  parse_bif_code.rs  parse_bif_code_tests.rs  parse_bif_contains.rs  parse_bif_contains_tests.rs  parse_bif_count.rs  parse_bif_data.rs  parse_bif_data_tests.rs  parse_bif_date.rs  parse_bif_date_tests.rs  parse_bif_debug.rs  parse_bif_debug_tests.rs  parse_bif_declare.rs  parse_bif_declare_tests.rs  parse_bif_defined.rs  parse_bif_defined_tests.rs  parse_bif_each.rs  parse_bif_each_tests.rs  parse_bif_else.rs  parse_bif_else_tests.rs  parse_bif_eval.rs  parse_bif_eval_tests.rs  parse_bif_exit.rs  parse_bif_exit_tests.rs  parse_bif_fetch.rs  parse_bif_fetch_tests.rs  parse_bif_filled.rs  (+41 more)
tests/: .neutralts_obj_bridge.php  bench.ntpl  complete.ntpl  local-data.json  obj.json  obj.ntpl  script.php  script.py  snippets-declare-invalid-flag.ntpl  test-bifs.rs  test-bifs_once.rs  test-injects_cache_false.rs  test-injects_cache_false_once.rs  test-injects_cache_true.rs  test-injects_cache_true_once.rs  test-msgpack.rs  test-performance.rs  test-schema-performance.rs  test-utils.rs
(+171 files in other folders)
