[package]
name = "neutralts"
description = "Neutral TS template engine is a web template designed to work with any programming language via IPC and natively as library/crate in Rust."
license = "Apache-2.0"
version = "1.3.0-dev"
edition = "2021"
homepage = "https://gitlab.com/neutralfw"
repository = "https://gitlab.com/neutralfw/neutralts"
documentation = "https://docs.rs/neutralts/latest/neutralts/"
keywords = ["web", "template", "engine", "templating", "handlebars"]
categories = ["template-engine", "web-programming"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["preserve_order"] }
pyo3 = { version = "0.25.1", features = [] }
regex = "1.11.2"
sha2 = "0.10.9"
chrono = "0.4.41"
md-5 = "0.10.6"
rand = "0.9.2"
lazy_static = "1.5.0"
