[package]
name = "neutralts"
description = "Neutral TS template engine is a web template designed to work with any programming language via IPC and natively as library/crate in Rust."
license = "Apache-2.0"
version = "1.3.3"
edition = "2021"
homepage = "https://franbarinstance.github.io/neutralts/"
repository = "https://github.com/FranBarInstance/neutralts"
documentation = "https://franbarinstance.github.io/neutralts-docs/docs/neutralts/"
keywords = ["webdev", "template", "engine", "templating", "handlebars"]
categories = ["template-engine", "web-programming"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["preserve_order"] }
pyo3 = { version = "0.28.0", features = [] }
regex = "1.11.2"
sha2 = "0.10.9"
chrono = "0.4.41"
md-5 = "0.10.6"
rand = "0.9.2"
lazy_static = "1.5.0"
